--- a/themes/craftsman/layouts/index.html
+++ b/themes/craftsman/layouts/index.html
@@ -29,7 +29,7 @@
       <div class="hero-features">
         <div class="hero-feature">
           <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="20 6 9 17 4 12"></polyline></svg>
-          10 Year Guarantee
+          Traditional Methods
         </div>
         <div class="hero-feature">
           <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="20 6 9 17 4 12"></polyline></svg>
@@ -112,7 +112,7 @@
             </li>
             <li>
               <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polyline points="20 6 9 17 4 12"></polyline></svg>
-              10 year insurance-backed guarantee
+              Free damp surveys
             </li>
           </ul>
           <a href="/services/damp-proofing/" class="btn btn--primary">Learn More</a>
@@ -145,8 +145,8 @@
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"></path></svg>
             </div>
             <div>
-              <h4>Insurance-Backed Guarantee</h4>
-              <p>All our work comes with a 10 year guarantee for complete peace of mind.</p>
+              <h4>Quality Craftsmanship</h4>
+              <p>Traditional methods and attention to detail on every project we undertake.</p>
             </div>
           </div>
           
