--- a/themes/craftsman/layouts/partials/footer.html
+++ b/themes/craftsman/layouts/partials/footer.html
@@ -5,16 +5,16 @@
       <!-- Brand Column -->
       <div class="footer-brand">
         <img src="/images/logo.png" alt="{{ .Site.Params.company.name }}" height="45">
-        <p>Traditional lime plastering and damp proofing specialists with over {{ .Site.Params.experience }} years combined experience. Serving Stroud, Cirencester, Tetbury and the Cotswolds with craftsmanship you can trust.</p>
+        <p>Specialist lime rendering and lime plastering for period homes across Stroud, Cirencester, Tetbury and the Cotswolds. Over {{ .Site.Params.experience }} years experience in heritage restoration.</p>
       </div>
       
       <!-- Services Column -->
       <div class="footer-column">
         <h4 class="footer-heading">Services</h4>
         <ul class="footer-links">
+          <li><a href="/services/lime-rendering/">Lime Rendering</a></li>
           <li><a href="/services/lime-plastering/">Lime Plastering</a></li>
           <li><a href="/services/damp-proofing/">Damp Proofing</a></li>
-          <li><a href="/projects/">Our Work</a></li>
           <li><a href="/contact/">Get a Quote</a></li>
         </ul>
       </div>
@@ -23,9 +23,9 @@
       <div class="footer-column">
         <h4 class="footer-heading">Areas We Cover</h4>
         <ul class="footer-links">
-          <li><a href="/areas/stroud/">Stroud & Surrounds</a></li>
-          <li><a href="/areas/cirencester/">Cirencester Area</a></li>
-          <li><a href="/areas/tetbury/">Tetbury Area</a></li>
+          <li><a href="/areas/stroud-lime-rendering-plastering/">Stroud & Surrounds</a></li>
+          <li><a href="/areas/cirencester-lime-rendering-plastering/">Cirencester Area</a></li>
+          <li><a href="/areas/tetbury-lime-rendering-plastering/">Tetbury Area</a></li>
           <li><a href="/areas/">All Areas</a></li>
         </ul>
       </div>
