--- a/themes/craftsman/layouts/index.html
+++ b/themes/craftsman/layouts/index.html
@@ -44,7 +44,7 @@
   </div>
   
   <div class="hero-image">
-    <img src="/images/hero.jpg" alt="Traditional lime plastering on a Cotswold stone property">
+    <img src="/images/hero.jpg" alt="Traditional lime rendering on Cotswold stone cottage in Stroud Gloucestershire">
   </div>
 </section>
 
@@ -62,7 +62,7 @@
       <div class="service-card service-card--featured">
         <div class="service-image">
           <span class="service-badge">Our Speciality</span>
-          <img src="/images/hero.jpg" alt="Lime rendering on Cotswold stone cottage">
+          <img src="/images/hero.jpg" alt="Professional lime rendering on period property Cotswolds">
         </div>
         <div class="service-content">
           <h3>Lime Rendering</h3>
@@ -88,7 +88,7 @@
       <!-- Lime Plastering -->
       <div class="service-card">
         <div class="service-image">
-          <img src="/images/limeworkhomeimage.jpg" alt="Internal lime plastering">
+          <img src="/images/limeworkhomeimage.jpg" alt="Internal lime plastering heritage property Gloucestershire">
         </div>
         <div class="service-content">
           <h3>Lime Plastering</h3>
@@ -114,7 +114,7 @@
       <!-- Damp Proofing -->
       <div class="service-card">
         <div class="service-image">
-          <img src="/images/dampproofinghomeimage.jpg" alt="Damp proofing treatment">
+          <img src="/images/dampproofinghomeimage.jpg" alt="Damp proofing treatment period property Stroud">
         </div>
         <div class="service-content">
           <h3>Damp Proofing</h3>
@@ -204,7 +204,7 @@
     
     <div class="areas-grid stagger">
       <a href="/areas/stroud-lime-rendering-plastering/" class="area-card">
-        <img src="/images/stroud.jfif" alt="Stroud - traditional Cotswold stone cottages">
+        <img src="/images/stroud.jfif" alt="Lime rendering services Stroud Cotswold stone cottage">
         <div class="area-card-overlay">
           <h3>Stroud &amp; Surrounds</h3>
           <p>Minchinhampton, Rodborough, Nailsworth &amp; more</p>
@@ -213,7 +213,7 @@
       </a>
       
       <a href="/areas/cirencester-lime-rendering-plastering/" class="area-card">
-        <img src="/images/cirencester.jfif" alt="Cirencester market town">
+        <img src="/images/cirencester.jfif" alt="Lime plastering Cirencester market town heritage buildings">
         <div class="area-card-overlay">
           <h3>Cirencester Area</h3>
           <p>Sapperton, Fairford, Baunton &amp; surrounds</p>
@@ -222,7 +222,7 @@
       </a>
       
       <a href="/areas/tetbury-lime-rendering-plastering/" class="area-card">
-        <img src="/images/tetbury.jfif" alt="Tetbury - charming Cotswold market town">
+        <img src="/images/tetbury.jfif" alt="Heritage restoration Tetbury Cotswolds period properties">
         <div class="area-card-overlay">
           <h3>Tetbury Area</h3>
           <p>Westonbirt, Shipton Moyne &amp; villages</p>
